--- a/src/views/user/user-register-form.ejs
+++ b/src/views/user/user-register-form.ejs
@@ -17,19 +17,27 @@
 					<div class="row product-detail">
 						<div class="col-12">
 							<label for="email" class="form-label">Email: *</label>
-							<input type="text" id="email" name="email" placeholder="Ej: example@example.com" class="form-input" value="">
+							<% if (typeof old != "undefined") { %>
+								<input type="text" id="email" name="email" placeholder="Ej: example@example.com" class="form-input" value= "<%= old.email ? old.email : '' %>">
+								<p><%= typeof errors == 'undefined' ? '' : typeof errors.email == 'undefined' ? '' : errors.email.msg %></p>
+							<%  } else { %>
+								<input type="text" id="email" name="email" placeholder="Ej: example@example.com" class="form-input" value="">
+							<% } %>
 						</div>
 						<div class="col-12 row">
 							<label for="image" class="form-label col-12">Avatar:</label>
 							<input type="file" id="image" name="avatar" class="form-file col-12">
+							<p><%= typeof errors == 'undefined' ? '' : typeof errors.avatar == 'undefined' ? '' : errors.email.msg %></p>
 						</div>
 						<div class="col-12">
 							<label for="password" class="form-label">Contraseña: *</label>
 							<input type="password" id="password" name="password" class="form-input">
+							<p><%= typeof errors == 'undefined' ? '' : typeof errors.password == 'undefined' ? '' : errors.email.msg %></p>
 						</div>
 						<div class="col-12">
 							<label for="retype" class="form-label">Repite la contraseña: *</label>
 							<input type="password" id="retype" name="retype" class="form-input">
+							<p><%= typeof errors == 'undefined' ? '' : typeof errors.retype == 'undefined' ? '' : errors.email.msg %></p>
 						</div>
 						<div class="mt-5 col-12">
 							<button type="submit" class="buy-now-button">Registrarse</button>
